--- a/package.json
+++ b/package.json
@@ -113,5 +113,14 @@
     "should": "~11.1.1",
     "supertest": "~2.0.0",
     "webpack-bundle-analyzer": "^2.9.1"
+  },
+  "now": {
+    "alias": "t1.n8.io",
+    "env": {
+      "API_SECRET": "@nightscout_api_secret",
+      "MONGO_CONNECTION": "@nightscout_mongo_url",
+      "DISPLAY_UNITS": "mg/dl",
+      "BASE_URL": "https://t1.n8.io"
+    }
   }
 }
