--- a/package.json
+++ b/package.json
@@ -109,5 +109,14 @@
     "supertest": "~2.0.0",
     "webpack-bundle-analyzer": "^2.11.1",
     "webpack-cli": "^2.0.13"
+  },
+  "now": {
+    "alias": "t1.n8.io",
+    "env": {
+      "API_SECRET": "@nightscout_api_secret",
+      "MONGO_CONNECTION": "@nightscout_mongo_url",
+      "DISPLAY_UNITS": "mg/dl",
+      "BASE_URL": "https://t1.n8.io"
+    }
   }
 }
