Use `dexcom-share` module

--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "css-loader": "^0.28.10",
     "cssmin": "^0.4.3",
     "d3": "^3.5.17",
+    "dexcom-share": "^2.0.0",
     "ejs": "^2.5.8",
     "errorhandler": "^1.5.0",
     "event-stream": "^3.3.4",
@@ -83,6 +84,7 @@
     "mongodb": "^3.0.5",
     "mongomock": "^0.1.2",
     "mqtt": "^0.3.13",
+    "ms": "^2.1.1",
     "node-cache": "^4.1.1",
     "parse-duration": "^0.1.1",
     "prettyjson": "^1.2.1",
@@ -90,7 +92,6 @@
     "random-token": "0.0.8",
     "request": "^2.83.0",
     "sgvdata": "git://github.com/ktind/sgvdata.git#wip/protobuf",
-    "share2nightscout-bridge": "git://github.com/bewest/share2nightscout-bridge.git#wip/generalize",
     "shiro-trie": "^0.3.13",
     "simple-statistics": "^0.7.0",
     "socket.io": "^2.0.4",
